Fix Calc tab positions, sidebar width and Status bar
- Calc: Fixes Tab list that was out of place and not visible
- Calc: Fixes inconsistency with background colours
- Calc: Fixes selected tab status by improving styling
  - Also use CSS vars instead
- Fixes overall (for all applications) toolbar-down (status bar)
  - Border was being overlapped and thus not being displayed

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -34,7 +34,6 @@
 	width: 1px;
 }
 #document-container {
-	border-top: 1px solid var(--gray-color);
 	background: #DFDFDF;
 	position: relative;
 	top: 0;
@@ -46,7 +45,7 @@
 }
 
 #document-container.sidebar-open {
-	width: calc(100vw - 351px);
+	width: calc(100vw - 336px);
 }
 
 #document-container.presentation-doctype.sidebar-open {
@@ -67,6 +66,7 @@
 	cursor: auto;
 	background-color: transparent;
 	margin: 0;
+	border-top: 1px solid var(--gray-color);
 }
 
 .leaflet-progress-layer
