--- a/loleaflet/css/spreadsheet.css
+++ b/loleaflet/css/spreadsheet.css
@@ -7,7 +7,7 @@
 	width: 100%;
 	white-space: nowrap;
 	text-align: left;
-	background-color: var(--gray-light-bg-color);
+	background-color: transparent;
 	vertical-align: middle;
 }
 
@@ -20,24 +20,23 @@
 }
 
 .spreadsheet-tab {
-	margin: 5px 3px 0px 0px !important;
-	padding: 8px 9px 5px !important;
+	margin: 0 8px 0 0 !important;
+	padding: 4px 9px 2px !important;
 	text-decoration: none;
 
 	font: 12px/1.5 var(--loleaflet-font);
 	display: inline-block;
-	border: 1px solid darkgrey;
-	background-color: lightgrey;
+	border: 1px solid rgba(var(--green0-txt-primary-color),0.3);
+	background-color: rgba(var(--green0-txt-primary-color),0.1);
 	color: black;
 }
 
 .spreadsheet-tab.spreadsheet-tab-selected {
-	background: white !important;
+	background: transparent !important;
 	color: black !important;
-	padding-top: 7px;
+	padding-top: 12px !important;
 	padding-bottom: 5px;
-	margin-top: 2px;
-	border: 1px solid #dfdfdf;
+	border: 1px solid rgba(var(--green0-txt-primary-color),0.5);
 	border-top: 0px;
 }
 
