--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -13,7 +13,7 @@
 	left: 0;
 	right: 0;
 	text-align: center;
-	padding: 0;
+	padding: 1px 2px 0;
 	bottom: 0;
 	z-index: 0;
 	border-top: 1px solid #bbbbbb;
@@ -83,7 +83,9 @@ w2ui-toolbar {
 #spreadsheet-toolbar {
 	width: 100%;
 	text-align: center;
-	padding: 7px 0px 0px;
+	padding: 0;
+	box-shadow: inset -1px -2px 0 0 white, inset 0 0 0 1px rgba(var(--green0-txt-primary-color),0.5);
+	z-index: 10;
 }
 
 #formulabar {
